<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_nav_menu_books"
            android:icon="@drawable/book"
            android:title="@string/nav_menu_books"
            />
        <item
            android:id="@+id/item_nav_menu_search"
            android:icon="@drawable/searchline"
            android:title="@string/nav_menu_search" />

        <item
            android:id="@+id/item_nav_menu_label"
            android:title="@string/nav_menu_label">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/item_nav_menu_add"
                        android:icon="@drawable/bookmark"
                        android:title="@string/nav_menu_add">

                    </item>
                </group>
            </menu>
        </item>>

        <item
            android:id="@+id/item_nav_menu_set"
            android:icon="@drawable/setting"
            android:title="@string/nav_menu_set" />

    </group>
</menu>